add submit button

--- a/index.html
+++ b/index.html
@@ -92,6 +92,9 @@
               <label class="form-check-label">Dragons</label>
             </div>
           </div>
+          <div class="text-center">
+            <input type="submit" value="SUBMIT" class="btn btn-light" />
+          </div>
         </form>
       </div>
     </div>
