--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               1. What is the name of Harry Potter's pet owl?
             </p>
             <div class="form-check my-2 text-white-50">
-              <input type="radio" name="q1" value="A" />
+              <input type="radio" name="q1" value="A" checked />
               <label class="form-check-label">Hedwig</label>
             </div>
             <div class="form-check my-2 text-white-50">
@@ -43,7 +43,7 @@
               2. Which house at Hogwarts does Harry belong to?
             </p>
             <div class="form-check my-2 text-white-50">
-              <input type="radio" name="q2" value="A" />
+              <input type="radio" name="q2" value="A" checked />
               <label class="form-check-label">Ravenclaw</label>
             </div>
             <div class="form-check my-2 text-white-50">
@@ -57,7 +57,7 @@
               Wizardry in the first movie?
             </p>
             <div class="form-check my-2 text-white-50">
-              <input type="radio" name="q3" value="A" />
+              <input type="radio" name="q3" value="A" checked />
               <label class="form-check-label">Severus Snape</label>
             </div>
             <div class="form-check my-2 text-white-50">
@@ -70,7 +70,7 @@
               4. What is the name of the train that takes students to Hogwarts?
             </p>
             <div class="form-check my-2 text-white-50">
-              <input type="radio" name="q4" value="A" />
+              <input type="radio" name="q4" value="A" checked />
               <label class="form-check-label">Hogwarts Express</label>
             </div>
             <div class="form-check my-2 text-white-50">
@@ -84,7 +84,7 @@
               Gringotts?
             </p>
             <div class="form-check my-2 text-white-50">
-              <input type="radio" name="q5" value="A" />
+              <input type="radio" name="q5" value="A" checked />
               <label class="form-check-label">House-elf</label>
             </div>
             <div class="form-check my-2 text-white-50">
